Normalized slot architecture (#76)
* Renamed operation front-matter

* Split apart operation front-matter

* First draft of split property frontmatter

* Split schema frontmatter into components

* Split breakout frontmatter into components

* Split remaining components into slots

* Style fixes

* Rebuilt examples

* Don't render empty sections

* Rebuilt examples

* Missed two

* Another one

* More optional callbacks

* Normalized missing slots

--- a/examples/custom/mistral/src/app/api/endpoint/ocr/page.mdx
+++ b/examples/custom/mistral/src/app/api/endpoint/ocr/page.mdx
@@ -1,18 +1,48 @@
 import "@/app/speakeasy.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationResponseBodySection } from "@/components/speakeasy";
+import {
+CodeSample,
+  ExpandableBreakout,
+  ExpandableBreakoutDefaultValue,
+  ExpandableBreakoutDescription,
+  ExpandableBreakoutExamples,
+  ExpandableBreakoutTitle,
+  ExpandableProperty,
+  ExpandablePropertyDefaultValue,
+  ExpandablePropertyDescription,
+  ExpandablePropertyTitle,
+  ExpandableSection,
+  Operation,
+  OperationCodeSamplesSection,
+  OperationRequestBodySection,
+  OperationResponseBodyDescriptionSection,
+  OperationResponseBodySection,
+  OperationSummarySection,
+  OperationTitleSection,
+  Pill,
+  Section,
+  SectionContent,
+  SectionTab,
+  SectionTitle,
+  TabbedSection,
+  TryItNow
+} from "@/components/speakeasy-custom";
 
 
 # Ocr Operations \{#ocr\}
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/ocr \{#operation-ocr_v1_ocr_post\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 OCR
 
-</OperationFrontMatterSection>
+</OperationSummarySection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -120,11 +150,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### bbox_annotation_format \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -136,11 +166,23 @@ with Mistral(
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### ResponseFormat \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -154,11 +196,11 @@ with Mistral(
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### json_schema \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -170,11 +212,23 @@ with Mistral(
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### JsonSchema \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -188,11 +242,11 @@ with Mistral(
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### description \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_description\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -207,11 +261,11 @@ with Mistral(
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### name \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_name\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -226,11 +280,11 @@ with Mistral(
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### schema_definition \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_schema_definition\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -244,11 +298,11 @@ with Mistral(
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### strict \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_strict\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -262,17 +316,17 @@ with Mistral(
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### type \{#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_type\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -286,17 +340,17 @@ An object specifying the format that the model must output. Setting to `\{ "type
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### document \{#operation-ocr_v1_ocr_post_request_document\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Document to run OCR on
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -308,11 +362,23 @@ Document to run OCR on
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### DocumentURLChunk \{#operation-ocr_v1_ocr_post_request_document_documenturlchunk\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -326,11 +392,11 @@ Document to run OCR on
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### document_name \{#operation-ocr_v1_ocr_post_request_document_documenturlchunk_document_name\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -345,11 +411,11 @@ Document to run OCR on
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### document_url \{#operation-ocr_v1_ocr_post_request_document_documenturlchunk_document_url\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -363,17 +429,17 @@ Document to run OCR on
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### type \{#operation-ocr_v1_ocr_post_request_document_documenturlchunk_type\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"document_url"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -385,17 +451,25 @@ _Default Value:_ `"document_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### ImageURLChunk \{#operation-ocr_v1_ocr_post_request_document_imageurlchunk\}
 
-</div>
+</ExpandableBreakoutTitle>
 
-<div slot="content">
+<ExpandableBreakoutDescription slot="description">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
-</div>
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -410,11 +484,11 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### image_url \{#operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -426,11 +500,23 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### ImageURL \{#operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -444,11 +530,11 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### detail \{#operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl_detail\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -463,11 +549,11 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### url \{#operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl_url\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -481,17 +567,17 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### type \{#operation-ocr_v1_ocr_post_request_document_imageurlchunk_type\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"image_url"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -504,11 +590,11 @@ _Default Value:_ `"image_url"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### document_annotation_format \{#operation-ocr_v1_ocr_post_request_document_annotation_format\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -520,11 +606,23 @@ _Default Value:_ `"image_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### ResponseFormat \{#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -538,11 +636,11 @@ _Default Value:_ `"image_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### json_schema \{#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -554,11 +652,23 @@ _Default Value:_ `"image_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### JsonSchema \{#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -572,11 +682,11 @@ _Default Value:_ `"image_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### description \{#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_description\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -591,11 +701,11 @@ _Default Value:_ `"image_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### name \{#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_name\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -610,11 +720,11 @@ _Default Value:_ `"image_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### schema_definition \{#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_schema_definition\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -628,11 +738,11 @@ _Default Value:_ `"image_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### strict \{#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_strict\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -646,17 +756,17 @@ _Default Value:_ `"image_url"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### type \{#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_type\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -669,11 +779,11 @@ An object specifying the format that the model must output. Setting to `\{ "type
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-ocr_v1_ocr_post_request_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -686,11 +796,11 @@ An object specifying the format that the model must output. Setting to `\{ "type
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### image_limit \{#operation-ocr_v1_ocr_post_request_image_limit\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -703,11 +813,11 @@ An object specifying the format that the model must output. Setting to `\{ "type
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### image_min_size \{#operation-ocr_v1_ocr_post_request_image_min_size\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -720,11 +830,11 @@ An object specifying the format that the model must output. Setting to `\{ "type
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### include_image_base64 \{#operation-ocr_v1_ocr_post_request_include_image_base64\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -738,11 +848,11 @@ An object specifying the format that the model must output. Setting to `\{ "type
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model \{#operation-ocr_v1_ocr_post_request_model\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -755,11 +865,11 @@ An object specifying the format that the model must output. Setting to `\{ "type
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### pages \{#operation-ocr_v1_ocr_post_request_pages\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -789,7 +899,11 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 <SectionContent slot="content" id="operation-ocr_v1_ocr_post_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 Successful Response
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -802,11 +916,11 @@ Successful Response
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### document_annotation \{#operation-ocr_v1_ocr_post_responses_200_application-json_document_annotation\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -820,17 +934,17 @@ Successful Response
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model \{#operation-ocr_v1_ocr_post_responses_200_application-json_model\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The model used to generate the OCR.
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -844,17 +958,17 @@ The model used to generate the OCR.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### pages \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 List of OCR info for pages.
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -866,11 +980,23 @@ List of OCR info for pages.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### OCRPageObject \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -885,11 +1011,11 @@ List of OCR info for pages.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### dimensions \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -901,17 +1027,25 @@ List of OCR info for pages.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### OCRPageDimensions \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions\}
 
-</div>
+</ExpandableBreakoutTitle>
 
-<div slot="content">
+<ExpandableBreakoutDescription slot="description">
 
 The dimensions of the PDF Page's screenshot image
 
-</div>
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -926,17 +1060,17 @@ The dimensions of the PDF Page's screenshot image
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### dpi \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_dpi\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Dots per inch of the page-image
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -951,17 +1085,17 @@ Dots per inch of the page-image
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### height \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_height\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Height of the image in pixels
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -976,17 +1110,17 @@ Height of the image in pixels
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### width \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_width\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Width of the image in pixels
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1001,17 +1135,17 @@ Width of the image in pixels
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### images \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 List of all extracted images in the page
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1023,11 +1157,23 @@ List of all extracted images in the page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### OCRImageObject \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -1042,11 +1188,11 @@ List of all extracted images in the page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### bottom_right_x \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_bottom_right_x\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1061,11 +1207,11 @@ List of all extracted images in the page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### bottom_right_y \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_bottom_right_y\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1080,17 +1226,17 @@ List of all extracted images in the page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Image ID for extracted image in a page
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1104,11 +1250,11 @@ Image ID for extracted image in a page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### image_annotation \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_image_annotation\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1122,11 +1268,11 @@ Image ID for extracted image in a page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### image_base64 \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_image_base64\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1141,11 +1287,11 @@ Image ID for extracted image in a page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### top_left_x \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_top_left_x\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1160,11 +1306,11 @@ Image ID for extracted image in a page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### top_left_y \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_top_left_y\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1179,17 +1325,17 @@ Image ID for extracted image in a page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### index \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_index\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The page index in a pdf document starting from 0
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1204,17 +1350,17 @@ The page index in a pdf document starting from 0
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### markdown \{#operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_markdown\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The markdown string response of the page
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1228,11 +1374,11 @@ The markdown string response of the page
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### usage_info \{#operation-ocr_v1_ocr_post_responses_200_application-json_usage_info\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1246,11 +1392,11 @@ The markdown string response of the page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### doc_size_bytes \{#operation-ocr_v1_ocr_post_responses_200_application-json_usage_info_doc_size_bytes\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1265,17 +1411,17 @@ The markdown string response of the page
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### pages_processed \{#operation-ocr_v1_ocr_post_responses_200_application-json_usage_info_pages_processed\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Number of pages processed
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
