--- a/examples/custom/mistral/src/app/api/global-security/page.mdx
+++ b/examples/custom/mistral/src/app/api/global-security/page.mdx
@@ -1,5 +1,7 @@
 import "@/app/speakeasy.css";
-import { Pill } from "@/components/speakeasy";
+import {
+Pill
+} from "@/components/speakeasy-custom";
 
 
 # Global Security
