--- a/examples/docusaurus/pokeapi/docs/api/endpoint/utility.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/utility.mdx
@@ -4,22 +4,54 @@ sidebar_label: Utility
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationSecuritySection, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, OperationParametersSection, OperationResponseBodySection, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import {
+ExpandableBreakout,
+  ExpandableBreakoutDefaultValue,
+  ExpandableBreakoutDescription,
+  ExpandableBreakoutExamples,
+  ExpandableBreakoutTitle,
+  ExpandableProperty,
+  ExpandablePropertyDescription,
+  ExpandablePropertyExamples,
+  ExpandablePropertyTitle,
+  ExpandableSection,
+  Operation,
+  OperationDescriptionSection,
+  OperationParametersSection,
+  OperationResponseBodySection,
+  OperationSecuritySection,
+  OperationSummarySection,
+  OperationTitleSection,
+  Pill,
+  Section,
+  SectionContent,
+  SectionTab,
+  SectionTitle,
+  TabbedSection
+} from "@speakeasy-api/docs-md/react";
 
 
 # Utility Operations \{#utility\}
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/language/ \{#operation-api_v2_language_list\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _List languages_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Languages for translations of API resource information.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationSecuritySection slot="security">
 
@@ -44,11 +76,11 @@ Languages for translations of API resource information.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### cookieAuth \{#operation-api_v2_language_list+security+cookieauth\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -61,11 +93,11 @@ Languages for translations of API resource information.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### basicAuth \{#operation-api_v2_language_list+security+basicauth\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -101,17 +133,17 @@ Languages for translations of API resource information.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### limit \{#operation-api_v2_language_list+parameters+limit\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Number of results to return per page.
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -125,17 +157,17 @@ Number of results to return per page.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### offset \{#operation-api_v2_language_list+parameters+offset\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The initial index from which to return the results.
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -149,18 +181,18 @@ The initial index from which to return the results.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### q \{#operation-api_v2_language_list+parameters+q\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -201,13 +233,13 @@ Case-insensitive query applied on the `name` property.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count \{#operation-api_v2_language_list+responses+200+application-json+count\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -215,7 +247,7 @@ _Example:_
 123
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -228,13 +260,13 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### next \{#operation-api_v2_language_list+responses+200+application-json+next\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -242,7 +274,7 @@ _Example:_
 http://api.example.org/accounts/?offset=400&limit=100
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -255,13 +287,13 @@ http://api.example.org/accounts/?offset=400&limit=100
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### previous \{#operation-api_v2_language_list+responses+200+application-json+previous\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -269,7 +301,7 @@ _Example:_
 http://api.example.org/accounts/?offset=200&limit=100
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -282,11 +314,11 @@ http://api.example.org/accounts/?offset=200&limit=100
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### results \{#operation-api_v2_language_list+responses+200+application-json+results\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -298,11 +330,23 @@ http://api.example.org/accounts/?offset=200&limit=100
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### LanguageSummary \{#operation-api_v2_language_list+responses+200+application-json+results+languagesummary\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -317,11 +361,11 @@ http://api.example.org/accounts/?offset=200&limit=100
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### name \{#operation-api_v2_language_list+responses+200+application-json+results+languagesummary+name\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -336,11 +380,11 @@ http://api.example.org/accounts/?offset=200&limit=100
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### url \{#operation-api_v2_language_list+responses+200+application-json+results+languagesummary+url\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -356,15 +400,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/language/\{id\}/ \{#operation-api_v2_language_retrieve\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Get language_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Languages for translations of API resource information.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationSecuritySection slot="security">
 
@@ -389,11 +441,11 @@ Languages for translations of API resource information.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### cookieAuth \{#operation-api_v2_language_retrieve+security+cookieauth\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -406,11 +458,11 @@ Languages for translations of API resource information.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### basicAuth \{#operation-api_v2_language_retrieve+security+basicauth\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -446,17 +498,17 @@ Languages for translations of API resource information.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-api_v2_language_retrieve+parameters+id\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 This parameter can be a string or an integer.
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -498,11 +550,11 @@ This parameter can be a string or an integer.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-api_v2_language_retrieve+responses+200+application-json+id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -516,11 +568,11 @@ This parameter can be a string or an integer.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### iso3166 \{#operation-api_v2_language_retrieve+responses+200+application-json+iso3166\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -534,11 +586,11 @@ This parameter can be a string or an integer.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### iso639 \{#operation-api_v2_language_retrieve+responses+200+application-json+iso639\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -552,11 +604,11 @@ This parameter can be a string or an integer.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### name \{#operation-api_v2_language_retrieve+responses+200+application-json+name\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -570,11 +622,11 @@ This parameter can be a string or an integer.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### names \{#operation-api_v2_language_retrieve+responses+200+application-json+names\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -586,11 +638,23 @@ This parameter can be a string or an integer.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### LanguageName \{#operation-api_v2_language_retrieve+responses+200+application-json+names+languagename\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -605,11 +669,11 @@ This parameter can be a string or an integer.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### language \{#operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -624,11 +688,11 @@ This parameter can be a string or an integer.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### name \{#operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+name\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -643,11 +707,11 @@ This parameter can be a string or an integer.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### url \{#operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+url\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -662,11 +726,11 @@ This parameter can be a string or an integer.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### name \{#operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+name\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -679,11 +743,11 @@ This parameter can be a string or an integer.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### official \{#operation-api_v2_language_retrieve+responses+200+application-json+official\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
