--- a/examples/nextra/mistral/src/app/api/endpoint/batch/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/batch/jobs/page.mdx
@@ -3,22 +3,57 @@ sidebarTitle: Batch Jobs
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, OperationParametersSection } from "@speakeasy-api/docs-md/react";
+import {
+CodeSample,
+  ExpandableBreakout,
+  ExpandableBreakoutDefaultValue,
+  ExpandableBreakoutDescription,
+  ExpandableBreakoutExamples,
+  ExpandableBreakoutTitle,
+  ExpandableProperty,
+  ExpandablePropertyDefaultValue,
+  ExpandablePropertyTitle,
+  ExpandableSection,
+  Operation,
+  OperationCodeSamplesSection,
+  OperationDescriptionSection,
+  OperationParametersSection,
+  OperationRequestBodySection,
+  OperationResponseBodyDescriptionSection,
+  OperationResponseBodySection,
+  OperationSummarySection,
+  OperationTitleSection,
+  Pill,
+  Section,
+  SectionContent,
+  SectionTab,
+  SectionTitle,
+  TabbedSection,
+  TryItNow
+} from "@speakeasy-api/docs-md/react";
 
 
 # Batch Jobs Operations [#batch/jobs]
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/batch/jobs [#operation-jobs_api_routes_batch_get_batch_jobs]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Get Batch Jobs_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Get a list of batch jobs for your organization and user.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -108,7 +143,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -121,11 +160,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### data [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -137,11 +176,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchJobOut [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout]
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -155,11 +206,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_at [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_completed_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -174,11 +225,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_requests [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_completed_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -193,11 +244,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_created_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -212,11 +263,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_endpoint]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -230,11 +281,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### error_file [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_error_file]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -249,11 +300,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### errors [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -265,11 +316,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchError [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror]
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -283,17 +346,17 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror_count]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `1`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -308,11 +371,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### message [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror_message]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -327,11 +390,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### failed_requests [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_failed_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -346,11 +409,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -365,11 +428,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_input_files]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -383,11 +446,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_metadata]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -402,11 +465,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_model]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -420,17 +483,17 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"batch"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -444,11 +507,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_file [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_output_file]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -462,11 +525,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### started_at [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_started_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -481,11 +544,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### status [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_status]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -500,11 +563,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### succeeded_requests [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_succeeded_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -519,11 +582,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_requests [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_total_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -536,17 +599,17 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"list"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -560,11 +623,11 @@ _Default Value:_ `"list"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total [#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_total]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -580,15 +643,23 @@ _Default Value:_ `"list"`
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/batch/jobs [#operation-jobs_api_routes_batch_create_batch_job]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Create Batch Job_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Create a new batch job, it will be queued for processing.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -692,11 +763,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint [#operation-jobs_api_routes_batch_create_batch_job_request_endpoint]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -710,11 +781,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files [#operation-jobs_api_routes_batch_create_batch_job_request_input_files]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -727,11 +798,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata [#operation-jobs_api_routes_batch_create_batch_job_request_metadata]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -745,11 +816,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model [#operation-jobs_api_routes_batch_create_batch_job_request_model]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -762,17 +833,17 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### timeout_hours [#operation-jobs_api_routes_batch_create_batch_job_request_timeout_hours]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `24`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -802,7 +873,11 @@ _Default Value:_ `24`
 
 <SectionContent slot="content" id="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -815,11 +890,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_at [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_completed_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -833,11 +908,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_requests [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_completed_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -851,11 +926,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_created_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -869,11 +944,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_endpoint]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -886,11 +961,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### error_file [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_error_file]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -904,11 +979,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### errors [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -920,11 +995,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchError [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror]
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -938,17 +1025,17 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror_count]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `1`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -963,11 +1050,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### message [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror_message]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -981,11 +1068,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### failed_requests [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_failed_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -999,11 +1086,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1017,11 +1104,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_input_files]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1034,11 +1121,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_metadata]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1052,11 +1139,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_model]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1069,17 +1156,17 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"batch"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1092,11 +1179,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_file [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_output_file]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1109,11 +1196,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### started_at [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_started_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1127,11 +1214,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### status [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_status]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1145,11 +1232,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### succeeded_requests [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_succeeded_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1163,11 +1250,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_requests [#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_total_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1183,15 +1270,23 @@ _Default Value:_ `"batch"`
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/batch/jobs/\{job\_id\} [#operation-jobs_api_routes_batch_get_batch_job]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Get Batch Job_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Get a batch job details by its UUID.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1217,11 +1312,11 @@ Get a batch job details by its UUID.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### job_id [#operation-jobs_api_routes_batch_get_batch_job_parameters_job_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1323,7 +1418,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1336,11 +1435,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_at [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_completed_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1354,11 +1453,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_requests [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_completed_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1372,11 +1471,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_created_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1390,11 +1489,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_endpoint]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1407,11 +1506,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### error_file [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_error_file]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1425,11 +1524,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### errors [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1441,11 +1540,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchError [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror]
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -1459,17 +1570,17 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror_count]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `1`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1484,11 +1595,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### message [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror_message]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1502,11 +1613,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### failed_requests [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_failed_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1520,11 +1631,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1538,11 +1649,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_input_files]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1555,11 +1666,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_metadata]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1573,11 +1684,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_model]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1590,17 +1701,17 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"batch"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1613,11 +1724,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_file [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_output_file]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1630,11 +1741,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### started_at [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_started_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1648,11 +1759,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### status [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_status]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1666,11 +1777,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### succeeded_requests [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_succeeded_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1684,11 +1795,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_requests [#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_total_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1704,15 +1815,23 @@ _Default Value:_ `"batch"`
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/batch/jobs/\{job\_id\}/cancel [#operation-jobs_api_routes_batch_cancel_batch_job]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Cancel Batch Job_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Request the cancellation of a batch job.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1738,11 +1857,11 @@ Request the cancellation of a batch job.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### job_id [#operation-jobs_api_routes_batch_cancel_batch_job_parameters_job_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1844,7 +1963,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1857,11 +1980,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_at [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_completed_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1875,11 +1998,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_requests [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_completed_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1893,11 +2016,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_created_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1911,11 +2034,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_endpoint]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1928,11 +2051,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### error_file [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_error_file]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1946,11 +2069,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### errors [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1962,11 +2085,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchError [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror]
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -1980,17 +2115,17 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror_count]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `1`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -2005,11 +2140,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### message [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror_message]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2023,11 +2158,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### failed_requests [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_failed_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2041,11 +2176,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2059,11 +2194,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_input_files]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2076,11 +2211,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_metadata]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2094,11 +2229,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_model]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2111,17 +2246,17 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"batch"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -2134,11 +2269,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_file [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_output_file]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2151,11 +2286,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### started_at [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_started_at]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2169,11 +2304,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### status [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_status]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2187,11 +2322,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### succeeded_requests [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_succeeded_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2205,11 +2340,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_requests [#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_total_requests]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
