--- a/examples/custom/mistral/src/app/api/endpoint/batch/jobs/page.mdx
+++ b/examples/custom/mistral/src/app/api/endpoint/batch/jobs/page.mdx
@@ -1,20 +1,55 @@
 import "@/app/speakeasy.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, OperationParametersSection } from "@/components/speakeasy";
+import {
+CodeSample,
+  ExpandableBreakout,
+  ExpandableBreakoutDefaultValue,
+  ExpandableBreakoutDescription,
+  ExpandableBreakoutExamples,
+  ExpandableBreakoutTitle,
+  ExpandableProperty,
+  ExpandablePropertyDefaultValue,
+  ExpandablePropertyTitle,
+  ExpandableSection,
+  Operation,
+  OperationCodeSamplesSection,
+  OperationDescriptionSection,
+  OperationParametersSection,
+  OperationRequestBodySection,
+  OperationResponseBodyDescriptionSection,
+  OperationResponseBodySection,
+  OperationSummarySection,
+  OperationTitleSection,
+  Pill,
+  Section,
+  SectionContent,
+  SectionTab,
+  SectionTitle,
+  TabbedSection,
+  TryItNow
+} from "@/components/speakeasy-custom";
 
 
 # Batch Jobs Operations \{#batch/jobs\}
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/batch/jobs \{#operation-jobs_api_routes_batch_get_batch_jobs\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Get Batch Jobs_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Get a list of batch jobs for your organization and user.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -104,7 +139,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -117,11 +156,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### data \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -133,11 +172,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchJobOut \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -151,11 +202,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_at \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_completed_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -170,11 +221,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_requests \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_completed_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -189,11 +240,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_created_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -208,11 +259,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_endpoint\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -226,11 +277,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### error_file \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_error_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -245,11 +296,11 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### errors \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -261,11 +312,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchError \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -279,17 +342,17 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror_count\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `1`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -304,11 +367,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### message \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror_message\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -323,11 +386,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### failed_requests \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_failed_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -342,11 +405,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -361,11 +424,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_input_files\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -379,11 +442,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_metadata\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -398,11 +461,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_model\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -416,17 +479,17 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"batch"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -440,11 +503,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_file \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_output_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -458,11 +521,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### started_at \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_started_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -477,11 +540,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### status \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_status\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -496,11 +559,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### succeeded_requests \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_succeeded_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -515,11 +578,11 @@ _Default Value:_ `"batch"`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_requests \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_total_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -532,17 +595,17 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"list"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -556,11 +619,11 @@ _Default Value:_ `"list"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total \{#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_total\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -576,15 +639,23 @@ _Default Value:_ `"list"`
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/batch/jobs \{#operation-jobs_api_routes_batch_create_batch_job\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Create Batch Job_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Create a new batch job, it will be queued for processing.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -688,11 +759,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint \{#operation-jobs_api_routes_batch_create_batch_job_request_endpoint\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -706,11 +777,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files \{#operation-jobs_api_routes_batch_create_batch_job_request_input_files\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -723,11 +794,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata \{#operation-jobs_api_routes_batch_create_batch_job_request_metadata\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -741,11 +812,11 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model \{#operation-jobs_api_routes_batch_create_batch_job_request_model\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -758,17 +829,17 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### timeout_hours \{#operation-jobs_api_routes_batch_create_batch_job_request_timeout_hours\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `24`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -798,7 +869,11 @@ _Default Value:_ `24`
 
 <SectionContent slot="content" id="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -811,11 +886,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_at \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_completed_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -829,11 +904,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_requests \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_completed_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -847,11 +922,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_created_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -865,11 +940,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_endpoint\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -882,11 +957,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### error_file \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_error_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -900,11 +975,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### errors \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -916,11 +991,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchError \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -934,17 +1021,17 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror_count\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `1`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -959,11 +1046,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### message \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror_message\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -977,11 +1064,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### failed_requests \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_failed_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -995,11 +1082,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1013,11 +1100,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_input_files\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1030,11 +1117,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_metadata\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1048,11 +1135,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_model\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1065,17 +1152,17 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"batch"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1088,11 +1175,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_file \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_output_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1105,11 +1192,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### started_at \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_started_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1123,11 +1210,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### status \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_status\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1141,11 +1228,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### succeeded_requests \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_succeeded_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1159,11 +1246,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_requests \{#operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_total_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1179,15 +1266,23 @@ _Default Value:_ `"batch"`
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/batch/jobs/\{job\_id\} \{#operation-jobs_api_routes_batch_get_batch_job\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Get Batch Job_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Get a batch job details by its UUID.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1213,11 +1308,11 @@ Get a batch job details by its UUID.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### job_id \{#operation-jobs_api_routes_batch_get_batch_job_parameters_job_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1319,7 +1414,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1332,11 +1431,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_at \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_completed_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1350,11 +1449,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_requests \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_completed_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1368,11 +1467,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_created_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1386,11 +1485,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_endpoint\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1403,11 +1502,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### error_file \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_error_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1421,11 +1520,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### errors \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1437,11 +1536,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchError \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -1455,17 +1566,17 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror_count\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `1`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1480,11 +1591,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### message \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror_message\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1498,11 +1609,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### failed_requests \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_failed_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1516,11 +1627,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1534,11 +1645,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_input_files\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1551,11 +1662,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_metadata\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1569,11 +1680,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_model\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1586,17 +1697,17 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"batch"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1609,11 +1720,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_file \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_output_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1626,11 +1737,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### started_at \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_started_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1644,11 +1755,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### status \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_status\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1662,11 +1773,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### succeeded_requests \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_succeeded_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1680,11 +1791,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_requests \{#operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_total_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1700,15 +1811,23 @@ _Default Value:_ `"batch"`
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/batch/jobs/\{job\_id\}/cancel \{#operation-jobs_api_routes_batch_cancel_batch_job\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Cancel Batch Job_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Request the cancellation of a batch job.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1734,11 +1853,11 @@ Request the cancellation of a batch job.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### job_id \{#operation-jobs_api_routes_batch_cancel_batch_job_parameters_job_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1840,7 +1959,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1853,11 +1976,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_at \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_completed_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1871,11 +1994,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completed_requests \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_completed_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1889,11 +2012,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_created_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1907,11 +2030,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### endpoint \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_endpoint\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1924,11 +2047,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### error_file \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_error_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1942,11 +2065,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### errors \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1958,11 +2081,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### BatchError \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -1976,17 +2111,17 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### count \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror_count\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `1`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -2001,11 +2136,11 @@ _Default Value:_ `1`
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### message \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror_message\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2019,11 +2154,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### failed_requests \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_failed_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2037,11 +2172,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2055,11 +2190,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### input_files \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_input_files\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2072,11 +2207,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### metadata \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_metadata\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2090,11 +2225,11 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_model\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2107,17 +2242,17 @@ _Default Value:_ `1`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDefaultValue slot="defaultValue">
 
 _Default Value:_ `"batch"`
 
-</div>
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -2130,11 +2265,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_file \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_output_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2147,11 +2282,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### started_at \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_started_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2165,11 +2300,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### status \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_status\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2183,11 +2318,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### succeeded_requests \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_succeeded_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -2201,11 +2336,11 @@ _Default Value:_ `"batch"`
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_requests \{#operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_total_requests\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
