--- a/examples/custom/mistral/src/app/api/endpoint/files/page.mdx
+++ b/examples/custom/mistral/src/app/api/endpoint/files/page.mdx
@@ -1,20 +1,58 @@
 import "@/app/speakeasy.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, OperationParametersSection, FrontMatterDisplayType } from "@/components/speakeasy";
+import {
+CodeSample,
+  ExpandableBreakout,
+  ExpandableBreakoutDefaultValue,
+  ExpandableBreakoutDescription,
+  ExpandableBreakoutExamples,
+  ExpandableBreakoutTitle,
+  ExpandableProperty,
+  ExpandablePropertyDescription,
+  ExpandablePropertyExamples,
+  ExpandablePropertyTitle,
+  ExpandableSection,
+  FrontMatterDisplayType,
+  Operation,
+  OperationCodeSamplesSection,
+  OperationDescriptionSection,
+  OperationParametersSection,
+  OperationRequestBodySection,
+  OperationResponseBodyDescriptionSection,
+  OperationResponseBodyDisplayTypeSection,
+  OperationResponseBodySection,
+  OperationSummarySection,
+  OperationTitleSection,
+  Pill,
+  Section,
+  SectionContent,
+  SectionTab,
+  SectionTitle,
+  TabbedSection,
+  TryItNow
+} from "@/components/speakeasy-custom";
 
 
 # Files Operations \{#files\}
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files \{#operation-files_api_routes_list_files\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _List Files_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Returns a list of files that belong to the user's organization.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -104,7 +142,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_list_files_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -118,11 +160,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### data \{#operation-files_api_routes_list_files_responses_200_application-json_data\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -134,11 +176,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### FileSchema \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema\}
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -153,15 +207,19 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_created_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The UNIX timestamp (in seconds) of the event.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -169,7 +227,7 @@ _Example:_
 1716963433
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -184,15 +242,19 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### filename \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_filename\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The name of the uploaded file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -200,7 +262,7 @@ _Example:_
 files_upload.jsonl
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -215,15 +277,19 @@ files_upload.jsonl
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The unique identifier of the file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -231,7 +297,7 @@ _Example:_
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -245,11 +311,11 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### num_lines \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_num_lines\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -264,15 +330,19 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The object type, which is always "file".
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -280,7 +350,7 @@ _Example:_
 file
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -295,11 +365,11 @@ file
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### purpose \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_purpose\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -314,11 +384,11 @@ file
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### sample_type \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_sample_type\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -333,15 +403,19 @@ file
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### size_bytes \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_size_bytes\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -349,7 +423,7 @@ _Example:_
 13000
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -364,11 +438,11 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### source \{#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_source\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -382,11 +456,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-files_api_routes_list_files_responses_200_application-json_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -400,11 +474,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total \{#operation-files_api_routes_list_files_responses_200_application-json_total\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -420,11 +494,19 @@ _Example:_
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/files \{#operation-files_api_routes_upload_file\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Upload File_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Upload a file that can be used across various endpoints.
 
@@ -432,7 +514,7 @@ The size of individual files can be a maximum of 512 MB. The Fine-tuning API onl
 
 Please contact us if you need to increase these storage limits.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -534,13 +616,13 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file \{#operation-files_api_routes_upload_file_request_file\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The File object (not file name) to be uploaded.
  To upload a file and specify a custom file name you should format your request as such:
@@ -552,7 +634,7 @@ The File object (not file name) to be uploaded.
  file=@path/to/your/file.jsonl
  ```
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -567,11 +649,11 @@ The File object (not file name) to be uploaded.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### content \{#operation-files_api_routes_upload_file_request_file_content\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -586,11 +668,11 @@ The File object (not file name) to be uploaded.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### fileName \{#operation-files_api_routes_upload_file_request_file_filename\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -603,11 +685,11 @@ The File object (not file name) to be uploaded.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### purpose \{#operation-files_api_routes_upload_file_request_purpose\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -637,7 +719,11 @@ The File object (not file name) to be uploaded.
 
 <SectionContent slot="content" id="operation-files_api_routes_upload_file_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -651,15 +737,19 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at \{#operation-files_api_routes_upload_file_responses_200_application-json_created_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The UNIX timestamp (in seconds) of the event.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -667,7 +757,7 @@ _Example:_
 1716963433
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -681,15 +771,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### filename \{#operation-files_api_routes_upload_file_responses_200_application-json_filename\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The name of the uploaded file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -697,7 +791,7 @@ _Example:_
 files_upload.jsonl
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -711,15 +805,19 @@ files_upload.jsonl
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-files_api_routes_upload_file_responses_200_application-json_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The unique identifier of the file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -727,7 +825,7 @@ _Example:_
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -740,11 +838,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### num_lines \{#operation-files_api_routes_upload_file_responses_200_application-json_num_lines\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -758,15 +856,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-files_api_routes_upload_file_responses_200_application-json_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The object type, which is always "file".
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -774,7 +876,7 @@ _Example:_
 file
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -788,11 +890,11 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### purpose \{#operation-files_api_routes_upload_file_responses_200_application-json_purpose\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -806,11 +908,11 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### sample_type \{#operation-files_api_routes_upload_file_responses_200_application-json_sample_type\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -824,15 +926,19 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### size_bytes \{#operation-files_api_routes_upload_file_responses_200_application-json_size_bytes\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -840,7 +946,7 @@ _Example:_
 13000
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -854,11 +960,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### source \{#operation-files_api_routes_upload_file_responses_200_application-json_source\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -874,15 +980,23 @@ _Example:_
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\} \{#operation-files_api_routes_retrieve_file\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Retrieve File_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Returns information about a specific file.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -908,11 +1022,11 @@ Returns information about a specific file.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file_id \{#operation-files_api_routes_retrieve_file_parameters_file_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1014,7 +1128,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_retrieve_file_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1028,15 +1146,19 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at \{#operation-files_api_routes_retrieve_file_responses_200_application-json_created_at\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The UNIX timestamp (in seconds) of the event.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1044,7 +1166,7 @@ _Example:_
 1716963433
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1058,11 +1180,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### deleted \{#operation-files_api_routes_retrieve_file_responses_200_application-json_deleted\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1076,15 +1198,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### filename \{#operation-files_api_routes_retrieve_file_responses_200_application-json_filename\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The name of the uploaded file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1092,7 +1218,7 @@ _Example:_
 files_upload.jsonl
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1106,15 +1232,19 @@ files_upload.jsonl
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-files_api_routes_retrieve_file_responses_200_application-json_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The unique identifier of the file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1122,7 +1252,7 @@ _Example:_
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1135,11 +1265,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### num_lines \{#operation-files_api_routes_retrieve_file_responses_200_application-json_num_lines\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1153,15 +1283,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-files_api_routes_retrieve_file_responses_200_application-json_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The object type, which is always "file".
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1169,7 +1303,7 @@ _Example:_
 file
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1183,11 +1317,11 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### purpose \{#operation-files_api_routes_retrieve_file_responses_200_application-json_purpose\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1201,11 +1335,11 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### sample_type \{#operation-files_api_routes_retrieve_file_responses_200_application-json_sample_type\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1219,15 +1353,19 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### size_bytes \{#operation-files_api_routes_retrieve_file_responses_200_application-json_size_bytes\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1235,7 +1373,7 @@ _Example:_
 13000
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1249,11 +1387,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### source \{#operation-files_api_routes_retrieve_file_responses_200_application-json_source\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1269,15 +1407,23 @@ _Example:_
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>DELETE</b></Pill> /v1/files/\{file\_id\} \{#operation-files_api_routes_delete_file\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Delete File_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Delete a file.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1303,11 +1449,11 @@ Delete a file.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file_id \{#operation-files_api_routes_delete_file_parameters_file_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1409,7 +1555,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_delete_file_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1423,15 +1573,19 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### deleted \{#operation-files_api_routes_delete_file_responses_200_application-json_deleted\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The deletion status.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1439,7 +1593,7 @@ _Example:_
 false
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1453,15 +1607,19 @@ false
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id \{#operation-files_api_routes_delete_file_responses_200_application-json_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The ID of the deleted file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1469,7 +1627,7 @@ _Example:_
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1483,15 +1641,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object \{#operation-files_api_routes_delete_file_responses_200_application-json_object\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The object type that was deleted
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1499,7 +1661,7 @@ _Example:_
 file
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1515,15 +1677,23 @@ file
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/content \{#operation-files_api_routes_download_file\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Download File_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Download a file
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1549,11 +1719,11 @@ Download a file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file_id \{#operation-files_api_routes_download_file_parameters_file_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1655,11 +1825,17 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_download_file_responses_200_application-octet-stream">
 
+<OperationResponseBodyDisplayTypeSection slot="response-body-display-type">
+
 <FrontMatterDisplayType typeInfo={{"label":"binary","linkedLabel":"binary","children":[],"breakoutSubTypes":{}}} />
 
-OK
+</OperationResponseBodyDisplayTypeSection>
+
+<OperationResponseBodyDescriptionSection slot="response-body-description">
 
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1675,13 +1851,17 @@ OK
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/url \{#operation-files_api_routes_get_signed_url\}
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 Get Signed Url
 
-</OperationFrontMatterSection>
+</OperationSummarySection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1707,11 +1887,11 @@ Get Signed Url
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file_id \{#operation-files_api_routes_get_signed_url_parameters_file_id\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1725,17 +1905,17 @@ Get Signed Url
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### expiry \{#operation-files_api_routes_get_signed_url_parameters_expiry\}
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Number of hours before the url becomes invalid. Defaults to 24h
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1837,7 +2017,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_get_signed_url_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1851,11 +2035,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### url \{#operation-files_api_routes_get_signed_url_responses_200_application-json_url\}
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
