--- a/examples/docusaurus/pokeapi/docs/api/global-security.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/global-security.mdx
@@ -4,7 +4,9 @@ sidebar_label: Global Security
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill } from "@speakeasy-api/docs-md/react";
+import {
+Pill
+} from "@speakeasy-api/docs-md/react";
 
 
 # Global Security
