--- a/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
@@ -3,22 +3,57 @@ sidebarTitle: Embeddings
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationRequestBodySection, Section, ExpandableSection, ExpandableProperty, OperationResponseBodySection, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import {
+CodeSample,
+  ExpandableBreakout,
+  ExpandableBreakoutDefaultValue,
+  ExpandableBreakoutDescription,
+  ExpandableBreakoutExamples,
+  ExpandableBreakoutTitle,
+  ExpandableProperty,
+  ExpandablePropertyDescription,
+  ExpandablePropertyExamples,
+  ExpandablePropertyTitle,
+  ExpandableSection,
+  Operation,
+  OperationCodeSamplesSection,
+  OperationDescriptionSection,
+  OperationRequestBodySection,
+  OperationResponseBodyDescriptionSection,
+  OperationResponseBodySection,
+  OperationSummarySection,
+  OperationTitleSection,
+  Pill,
+  Section,
+  SectionContent,
+  SectionTab,
+  SectionTitle,
+  TabbedSection,
+  TryItNow
+} from "@speakeasy-api/docs-md/react";
 
 
 # Embeddings Operations [#embeddings]
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/embeddings [#operation-embeddings_v1_embeddings_post]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Embeddings_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Embeddings
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -123,17 +158,17 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### inputs [#operation-embeddings_v1_embeddings_post_request_inputs]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Text to embed.
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -147,15 +182,19 @@ Text to embed.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model [#operation-embeddings_v1_embeddings_post_request_model]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 ID of the model to use.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -163,7 +202,7 @@ _Example:_
 mistral-embed
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -176,11 +215,11 @@ mistral-embed
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_dimension [#operation-embeddings_v1_embeddings_post_request_output_dimension]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -193,11 +232,11 @@ mistral-embed
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### output_dtype [#operation-embeddings_v1_embeddings_post_request_output_dtype]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -227,7 +266,11 @@ mistral-embed
 
 <SectionContent slot="content" id="operation-embeddings_v1_embeddings_post_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 Successful Response
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -241,11 +284,11 @@ Successful Response
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### data [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -257,11 +300,23 @@ Successful Response
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### EmbeddingResponseData [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata]
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -275,11 +330,11 @@ Successful Response
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### embedding [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_embedding]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -293,13 +348,13 @@ Successful Response
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### index [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_index]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -307,7 +362,7 @@ _Example:_
 0
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -321,13 +376,13 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -335,7 +390,7 @@ _Example:_
 embedding
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -349,13 +404,13 @@ embedding
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-embeddings_v1_embeddings_post_responses_200_application-json_id]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -363,7 +418,7 @@ _Example:_
 cmpl-e5cc70bb28c444948073e77776eb30ef
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -377,13 +432,13 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### model [#operation-embeddings_v1_embeddings_post_responses_200_application-json_model]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -391,7 +446,7 @@ _Example:_
 mistral-small-latest
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -405,13 +460,13 @@ mistral-small-latest
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-embeddings_v1_embeddings_post_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -419,7 +474,7 @@ _Example:_
 chat.completion
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -433,11 +488,11 @@ chat.completion
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### usage [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -452,13 +507,13 @@ chat.completion
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### completion_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_completion_tokens]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -466,7 +521,7 @@ _Example:_
 34
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -481,13 +536,13 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### prompt_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_prompt_tokens]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -495,7 +550,7 @@ _Example:_
 16
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -510,13 +565,13 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_total_tokens]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -524,7 +579,7 @@ _Example:_
 50
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
