--- a/examples/nextra/mistral/src/app/api/endpoint/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/files/page.mdx
@@ -3,22 +3,60 @@ sidebarTitle: Files
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Operation, OperationFrontMatterSection, Pill, OperationCodeSamplesSection, TabbedSection, SectionTitle, TryItNow, SectionTab, SectionContent, CodeSample, OperationResponseBodySection, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, Section, OperationParametersSection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import {
+CodeSample,
+  ExpandableBreakout,
+  ExpandableBreakoutDefaultValue,
+  ExpandableBreakoutDescription,
+  ExpandableBreakoutExamples,
+  ExpandableBreakoutTitle,
+  ExpandableProperty,
+  ExpandablePropertyDescription,
+  ExpandablePropertyExamples,
+  ExpandablePropertyTitle,
+  ExpandableSection,
+  FrontMatterDisplayType,
+  Operation,
+  OperationCodeSamplesSection,
+  OperationDescriptionSection,
+  OperationParametersSection,
+  OperationRequestBodySection,
+  OperationResponseBodyDescriptionSection,
+  OperationResponseBodyDisplayTypeSection,
+  OperationResponseBodySection,
+  OperationSummarySection,
+  OperationTitleSection,
+  Pill,
+  Section,
+  SectionContent,
+  SectionTab,
+  SectionTitle,
+  TabbedSection,
+  TryItNow
+} from "@speakeasy-api/docs-md/react";
 
 
 # Files Operations [#files]
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files [#operation-files_api_routes_list_files]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _List Files_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Returns a list of files that belong to the user's organization.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -108,7 +146,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_list_files_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -122,11 +164,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### data [#operation-files_api_routes_list_files_responses_200_application-json_data]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -138,11 +180,23 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandableBreakoutTitle slot="title">
 
 #### FileSchema [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema]
 
-</div>
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutDescription slot="description">
+
+</ExpandableBreakoutDescription>
+
+<ExpandableBreakoutExamples slot="examples">
+
+</ExpandableBreakoutExamples>
+
+<ExpandableBreakoutDefaultValue slot="defaultValue">
+
+</ExpandableBreakoutDefaultValue>
 
 </ExpandableBreakout>
 
@@ -157,15 +211,19 @@ OK
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_created_at]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The UNIX timestamp (in seconds) of the event.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -173,7 +231,7 @@ _Example:_
 1716963433
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -188,15 +246,19 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### filename [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_filename]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The name of the uploaded file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -204,7 +266,7 @@ _Example:_
 files_upload.jsonl
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -219,15 +281,19 @@ files_upload.jsonl
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_id]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The unique identifier of the file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -235,7 +301,7 @@ _Example:_
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -249,11 +315,11 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### num_lines [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_num_lines]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -268,15 +334,19 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The object type, which is always "file".
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -284,7 +354,7 @@ _Example:_
 file
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -299,11 +369,11 @@ file
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### purpose [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_purpose]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -318,11 +388,11 @@ file
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### sample_type [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_sample_type]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -337,15 +407,19 @@ file
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### size_bytes [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_size_bytes]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -353,7 +427,7 @@ _Example:_
 13000
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -368,11 +442,11 @@ _Example:_
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### source [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_source]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -386,11 +460,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-files_api_routes_list_files_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -404,11 +478,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### total [#operation-files_api_routes_list_files_responses_200_application-json_total]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -424,11 +498,19 @@ _Example:_
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/files [#operation-files_api_routes_upload_file]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Upload File_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Upload a file that can be used across various endpoints.
 
@@ -436,7 +518,7 @@ The size of individual files can be a maximum of 512 MB. The Fine-tuning API onl
 
 Please contact us if you need to increase these storage limits.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationCodeSamplesSection slot="code-samples">
 
@@ -538,13 +620,13 @@ with Mistral(
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file [#operation-files_api_routes_upload_file_request_file]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The File object (not file name) to be uploaded.
  To upload a file and specify a custom file name you should format your request as such:
@@ -556,7 +638,7 @@ The File object (not file name) to be uploaded.
  file=@path/to/your/file.jsonl
  ```
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -571,11 +653,11 @@ The File object (not file name) to be uploaded.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### content [#operation-files_api_routes_upload_file_request_file_content]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -590,11 +672,11 @@ The File object (not file name) to be uploaded.
   expandByDefault={false}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### fileName [#operation-files_api_routes_upload_file_request_file_filename]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -607,11 +689,11 @@ The File object (not file name) to be uploaded.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### purpose [#operation-files_api_routes_upload_file_request_purpose]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -641,7 +723,11 @@ The File object (not file name) to be uploaded.
 
 <SectionContent slot="content" id="operation-files_api_routes_upload_file_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -655,15 +741,19 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at [#operation-files_api_routes_upload_file_responses_200_application-json_created_at]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The UNIX timestamp (in seconds) of the event.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -671,7 +761,7 @@ _Example:_
 1716963433
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -685,15 +775,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### filename [#operation-files_api_routes_upload_file_responses_200_application-json_filename]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The name of the uploaded file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -701,7 +795,7 @@ _Example:_
 files_upload.jsonl
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -715,15 +809,19 @@ files_upload.jsonl
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-files_api_routes_upload_file_responses_200_application-json_id]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The unique identifier of the file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -731,7 +829,7 @@ _Example:_
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -744,11 +842,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### num_lines [#operation-files_api_routes_upload_file_responses_200_application-json_num_lines]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -762,15 +860,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-files_api_routes_upload_file_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The object type, which is always "file".
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -778,7 +880,7 @@ _Example:_
 file
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -792,11 +894,11 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### purpose [#operation-files_api_routes_upload_file_responses_200_application-json_purpose]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -810,11 +912,11 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### sample_type [#operation-files_api_routes_upload_file_responses_200_application-json_sample_type]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -828,15 +930,19 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### size_bytes [#operation-files_api_routes_upload_file_responses_200_application-json_size_bytes]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -844,7 +950,7 @@ _Example:_
 13000
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -858,11 +964,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### source [#operation-files_api_routes_upload_file_responses_200_application-json_source]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -878,15 +984,23 @@ _Example:_
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\} [#operation-files_api_routes_retrieve_file]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Retrieve File_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Returns information about a specific file.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -912,11 +1026,11 @@ Returns information about a specific file.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file_id [#operation-files_api_routes_retrieve_file_parameters_file_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1018,7 +1132,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_retrieve_file_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1032,15 +1150,19 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### created_at [#operation-files_api_routes_retrieve_file_responses_200_application-json_created_at]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The UNIX timestamp (in seconds) of the event.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1048,7 +1170,7 @@ _Example:_
 1716963433
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1062,11 +1184,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### deleted [#operation-files_api_routes_retrieve_file_responses_200_application-json_deleted]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1080,15 +1202,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### filename [#operation-files_api_routes_retrieve_file_responses_200_application-json_filename]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The name of the uploaded file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1096,7 +1222,7 @@ _Example:_
 files_upload.jsonl
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1110,15 +1236,19 @@ files_upload.jsonl
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-files_api_routes_retrieve_file_responses_200_application-json_id]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The unique identifier of the file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1126,7 +1256,7 @@ _Example:_
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1139,11 +1269,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### num_lines [#operation-files_api_routes_retrieve_file_responses_200_application-json_num_lines]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1157,15 +1287,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-files_api_routes_retrieve_file_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The object type, which is always "file".
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1173,7 +1307,7 @@ _Example:_
 file
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1187,11 +1321,11 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### purpose [#operation-files_api_routes_retrieve_file_responses_200_application-json_purpose]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1205,11 +1339,11 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### sample_type [#operation-files_api_routes_retrieve_file_responses_200_application-json_sample_type]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1223,15 +1357,19 @@ file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### size_bytes [#operation-files_api_routes_retrieve_file_responses_200_application-json_size_bytes]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1239,7 +1377,7 @@ _Example:_
 13000
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1253,11 +1391,11 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### source [#operation-files_api_routes_retrieve_file_responses_200_application-json_source]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1273,15 +1411,23 @@ _Example:_
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>DELETE</b></Pill> /v1/files/\{file\_id\} [#operation-files_api_routes_delete_file]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Delete File_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Delete a file.
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1307,11 +1453,11 @@ Delete a file.
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file_id [#operation-files_api_routes_delete_file_parameters_file_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1413,7 +1559,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_delete_file_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1427,15 +1577,19 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### deleted [#operation-files_api_routes_delete_file_responses_200_application-json_deleted]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The deletion status.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1443,7 +1597,7 @@ _Example:_
 false
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1457,15 +1611,19 @@ false
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### id [#operation-files_api_routes_delete_file_responses_200_application-json_id]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The ID of the deleted file.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1473,7 +1631,7 @@ _Example:_
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1487,15 +1645,19 @@ _Example:_
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### object [#operation-files_api_routes_delete_file_responses_200_application-json_object]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 The object type that was deleted
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
 
 _Example:_
 
@@ -1503,7 +1665,7 @@ _Example:_
 file
 ```
 
-</div>
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1519,15 +1681,23 @@ file
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/content [#operation-files_api_routes_download_file]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 _Download File_
+
+</OperationSummarySection>
+
+<OperationDescriptionSection slot="description">
 
 Download a file
 
-</OperationFrontMatterSection>
+</OperationDescriptionSection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1553,11 +1723,11 @@ Download a file
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file_id [#operation-files_api_routes_download_file_parameters_file_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1659,11 +1829,17 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_download_file_responses_200_application-octet-stream">
 
+<OperationResponseBodyDisplayTypeSection slot="response-body-display-type">
+
 <FrontMatterDisplayType typeInfo={{"label":"binary","linkedLabel":"binary","children":[],"breakoutSubTypes":{}}} />
 
-OK
+</OperationResponseBodyDisplayTypeSection>
+
+<OperationResponseBodyDescriptionSection slot="response-body-description">
 
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1679,13 +1855,17 @@ OK
 
 <Operation>
 
-<OperationFrontMatterSection slot="front-matter">
+<OperationTitleSection slot="title">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/url [#operation-files_api_routes_get_signed_url]
 
+</OperationTitleSection>
+
+<OperationSummarySection slot="summary">
+
 Get Signed Url
 
-</OperationFrontMatterSection>
+</OperationSummarySection>
 
 <OperationParametersSection slot="parameters">
 
@@ -1711,11 +1891,11 @@ Get Signed Url
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### file_id [#operation-files_api_routes_get_signed_url_parameters_file_id]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
@@ -1729,17 +1909,17 @@ Get Signed Url
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### expiry [#operation-files_api_routes_get_signed_url_parameters_expiry]
 
-</div>
+</ExpandablePropertyTitle>
 
-<div slot="content">
+<ExpandablePropertyDescription slot="description">
 
 Number of hours before the url becomes invalid. Defaults to 24h
 
-</div>
+</ExpandablePropertyDescription>
 
 </ExpandableProperty>
 
@@ -1841,7 +2021,11 @@ with Mistral(
 
 <SectionContent slot="content" id="operation-files_api_routes_get_signed_url_responses_200_application-json">
 
+<OperationResponseBodyDescriptionSection slot="response-body-description">
+
 OK
+
+</OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
 
@@ -1855,11 +2039,11 @@ OK
   expandByDefault={true}
 >
 
-<div slot="title">
+<ExpandablePropertyTitle slot="title">
 
 ##### url [#operation-files_api_routes_get_signed_url_responses_200_application-json_url]
 
-</div>
+</ExpandablePropertyTitle>
 
 </ExpandableProperty>
 
