--- a/examples/nextra/mistral/src/app/api/global-security/page.mdx
+++ b/examples/nextra/mistral/src/app/api/global-security/page.mdx
@@ -3,7 +3,9 @@ sidebarTitle: Global Security
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill } from "@speakeasy-api/docs-md/react";
+import {
+Pill
+} from "@speakeasy-api/docs-md/react";
 
 
 # Global Security
